apps/base/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - name: web
          containerPort: 32400
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        - name: music
          mountPath: /music
        - name: dri
          mountPath: /dev/dri
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "24"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config-lh
      - name: tv
        hostPath:
          path: /media/Torrent/Shows
          type: Directory
      - name: movies
        hostPath:
          path: /media/Torrent/Movies
          type: Directory
      - name: music
        hostPath:
          path: /media/Torrent/Music
          type: Directory
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
