apps/base/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
  annotations:
    metallb.universe.tf/address-pool: default-pool
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.221  # Pick a static IP from your MetalLB pool
  selector:
    app: plex
  ports:
  - name: web
    port: 32400
    targetPort: 32400
    protocol: TCP
